--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ github.event.release.upload_url }}
-          asset_path: ${{ env.GITHUB_WORKSPACE }}/${{ steps.build-vsix.outputs.vsix }}
+          asset_path: ${{ steps.build-vsix.outputs.vsix }}
           asset_name: ${{ steps.build-vsix.outputs.vsix }}
           asset_content_type: application/octet-stream
